[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rob-robinhood"
version = "1.0.0"
description = "Robinhood Position Manager - Manage your portfolio positions in bulk"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["robinhood", "trading", "portfolio", "finance", "cli"]
dependencies = [
    "robin-stocks==3.4.0",
    "pyotp==2.9.0",
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "tabulate==0.9.0",
]

[project.urls]
Homepage = "https://github.com/slugiscool99/rob"
Repository = "https://github.com/slugiscool99/rob"
Issues = "https://github.com/slugiscool99/rob/issues"

[project.scripts]
rob = "rob:main"

[tool.setuptools]
py-modules = ["rob"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]
